<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvForm"
            android:textSize="18dp"
            android:text="@string/filtro"/>
        <Spinner
            android:id="@+id/spinnerFiltro"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:background="@drawable/border_lista"
            android:layout_marginLeft="16dp"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/periodo"
            android:textSize="18dp"
            android:id="@+id/tvPeriodo"
            android:layout_marginLeft="16dp"/>
        <Spinner
            android:id="@+id/spinnerPeriodo"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:background="@drawable/border_lista"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:dividerHeight="0dp"
        android:divider="@null"
        android:layout_weight=".7">

        </ListView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sync"
        android:layout_gravity="center"
        android:gravity="left|center"
        android:paddingRight="40dp"
        android:paddingLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:drawablePadding="10dp"
        android:drawableLeft="@drawable/play"
        android:background="@drawable/border_button_home"
        android:id="@+id/buttonSync" />

</LinearLayout>