<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center">

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:background="@drawable/border_lista_titulo_romaneio"
                android:text="@string/instituicao"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:background="@drawable/border_lista_titulo_romaneio"
                android:text="@string/total"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:background="@drawable/border_lista_titulo_romaneio"
                android:text="@string/codRomaneio"
                android:textAlignment="center"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tvInstituicao"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:maxLength="13"
                android:background="@drawable/border_lista_romaneio"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvTotal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:background="@drawable/border_lista_romaneio"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvCodRomaneio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:background="@drawable/border_lista_romaneio"
                android:textAlignment="center"
                android:textColor="@color/black" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp">

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight=".2"
                android:text="Código"
                android:textColor="@color/black"
                android:background="@drawable/border_lista_titulo_romaneio"
                android:textAlignment="center"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight=".2"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:background="@drawable/border_lista_titulo_romaneio"
                android:text="Descrição"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight=".15"
                android:background="@drawable/border_lista_titulo_romaneio"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="Emb/Kg"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight=".15"
                android:background="@drawable/border_lista_titulo_romaneio"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="Qtde"
                />

        </TableRow>
    </TableLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_weight=".1">

    </ListView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btAssinar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/border_button_home"
                android:src="@drawable/ic_assinar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="ASSINAR" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btAlterar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/border_button_home"
                android:src="@drawable/alterar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="ALTERAR" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>